--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aya's portofolio</title>
+  <title>Aya's</title>
   <link href="/dist/output.css" rel="stylesheet" />
 </head>
 <link rel="icon" href="img/logo.png">
@@ -80,7 +80,7 @@
 
             <div class="w-full self-end relative px-4 lg:w-1/2">
               <div class=" mt-10 lg:right-0 lg:mt-0">
-                <img src="img/" alt="ini" class="relative z-10 mx-auto max-w-full">
+                <img src="img/ini.svg.png" alt="ini" class="relative z-10 mx-auto max-w-full">
                 <span class="absolute -bottom-0 left-1/2 -translate-x-1/2 md:scale-5">
                   <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                     <path fill="#92400e" d="M47.9,-58.9C62.1,-55.6,73.8,-41.7,79.3,-25.6C84.8,-9.5,84.1,8.8,74.2,19.4C64.3,30,45.1,32.9,31.2,36.4C17.3,39.9,8.7,44.1,-4.4,50.2C-17.4,56.2,-34.9,64.1,-46.2,59.8C-57.5,55.4,-62.7,38.7,-66.7,22.5C-70.8,6.4,-73.8,-9.3,-69.1,-22.1C-64.5,-35,-52.3,-45.1,-39.5,-48.9C-26.7,-52.7,-13.4,-50.3,1.7,-52.7C16.8,-55,33.7,-62.3,47.9,-58.9Z" transform="translate(100 100) scale(0.9)" />
