--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-compatible" content="IE-edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ayas</title>
+  <title>Ayaise Foundation</title>
   <link href="/dist/output.css" rel="stylesheet" />
 </head>
 <link rel="icon" href="img/logo.png">
